Created documentation using framework tsoa
