# app/src/models/GaugeMetric.ts
@@ -1,8 +1,7 @@
 import { Metric } from "./Metric";
 
 export class GaugeMetric extends Metric{
-    constructor(public Metric : Metric,
-                public Operation : number){
+    constructor(public Operation : number){
         super();        
     }
 }
